--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,6 @@ export(get_artist_meta)
 export(get_artist_songs)
 export(get_lyrics)
 export(get_song_meta)
-export(get_tracklist)
+export(scrape_tracklist)
 export(search_artist)
 export(search_song)
