--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export(genius_token)
 export(get_album_meta)
 export(get_artist_meta)
 export(get_artist_songs)
-export(get_lyrics)
 export(get_song_meta)
+export(scrape_lyrics)
 export(scrape_tracklist)
 export(search_artist)
 export(search_song)
