--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: geniusr
-Title: Tools to Work with the Genius API
+Title: Tools for Working with the Genius API
 Version: 0.0.0.9000
 Authors@R: person("Ewen", "Henderson", email = "ewenhenderson@gmail.com", role = c("aut", "cre"))
 Description: Provides tools for R to interact with the Genius API <https://docs.genius.com/>.
