--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,5 @@ export(scrape_lyrics)
 export(scrape_tracklist)
 export(search_artist)
 export(search_song)
+importFrom(dplyr,"%>%")
+importFrom(magrittr,"%>%")
