--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,3 +9,10 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Imports: dplyr,
+    httr,
+    purrr,
+    rvest,
+    stringr,
+    xml2,
+    magrittr
