--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ URL: https://github.com/ewenme/geniusr
 Depends: R (>= 3.2.0)
 License: MIT + file LICENSE
 Encoding: UTF-8
-LazyData: true
+LazyData: yes
 RoxygenNote: 6.0.1
 Imports: dplyr,
     httr,
