--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,8 @@ export(get_album_meta)
 export(get_artist_meta)
 export(get_artist_songs)
 export(get_song_meta)
-export(scrape_lyrics)
+export(scrape_lyrics_id)
+export(scrape_lyrics_url)
 export(scrape_tracklist)
 export(search_artist)
 export(search_song)
