rm dplyr dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,4 @@ export(scrape_lyrics_url)
 export(scrape_tracklist)
 export(search_artist)
 export(search_song)
-importFrom(magrittr,"%>%")
+importFrom(purrr,"%>%")
