--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,10 +9,9 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: yes
 RoxygenNote: 6.0.1
-Imports: dplyr,
-    httr,
+Imports: httr,
     purrr,
+    tibble,
     rvest,
     stringr,
-    xml2,
-    magrittr
+    xml2
