--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,8 @@ Package: geniusr
 Title: Tools for Working with the Genius API
 Version: 1.0.0
 Authors@R: person("Ewen", "Henderson", email = "ewenhenderson@gmail.com", role = c("aut", "cre"))
-Description: Provides tools for R to interact with the Genius API <https://docs.genius.com/>.
+Description: Provides tools for R to interact nicely with the Genius API <https://docs.genius.com/>. 
+Search Genius' hosted content, extract metadata and pull lyrics.
 URL: https://github.com/ewenme/geniusr
 Depends: R (>= 3.2.0)
 License: MIT + file LICENSE
