add internet checks. use xml2 for reading html.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,4 +10,6 @@ export(scrape_lyrics_url)
 export(scrape_tracklist)
 export(search_artist)
 export(search_song)
+importFrom(attempt,stop_if_not)
+importFrom(curl,has_internet)
 importFrom(purrr,"%>%")
