--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,14 +4,18 @@ Version: 1.0.0.9000
 Authors@R: person("Ewen", "Henderson", email = "ewenhenderson@gmail.com", role = c("aut", "cre"))
 Description: Provides tools to interact nicely with the 'Genius' API <https://docs.genius.com/>. Search hosted content, extract different types of associated metadata and retrieve lyrics with ease.
 URL: https://github.com/ewenme/geniusr
+BugReports: https://github.com/ewenme/geniusr/issues
 Depends: R (>= 3.2.0)
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: yes
 RoxygenNote: 6.1.1
-Imports: httr,
+Imports: 
+    httr,
     purrr,
     tibble,
     rvest,
     stringr,
-    xml2
+    xml2,
+    curl,
+    attempt
