--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,9 @@
 Package: geniusr
 Title: Tools for Working with the 'Genius' API
 Version: 1.1.0.9000
-Authors@R: person("Ewen", "Henderson", email = "ewenhenderson@gmail.com", role = c("aut", "cre"))
+Authors@R: 
+    person("Ewen", "Henderson", email = "ewenhenderson@gmail.com", role = c("aut", "cre"),
+    comment = c(ORCID = "0000-0002-4748-4693"))
 Description: Provides tools to interact nicely with the 'Genius' API <https://docs.genius.com/>. Search hosted content, extract different types of associated metadata and retrieve lyrics with ease.
 URL: https://github.com/ewenme/geniusr
 BugReports: https://github.com/ewenme/geniusr/issues
