--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(genius_token)
 export(get_album_meta)
 export(get_artist_meta)
 export(get_artist_songs)
+export(get_song)
 export(get_song_meta)
 export(scrape_lyrics_id)
 export(scrape_lyrics_url)
@@ -12,4 +13,22 @@ export(search_artist)
 export(search_song)
 importFrom(attempt,stop_if_not)
 importFrom(curl,has_internet)
+importFrom(httr,GET)
+importFrom(httr,add_headers)
+importFrom(httr,content)
+importFrom(httr,stop_for_status)
+importFrom(httr,user_agent)
 importFrom(purrr,"%>%")
+importFrom(purrr,is_empty)
+importFrom(purrr,map_df)
+importFrom(rvest,html_attr)
+importFrom(rvest,html_nodes)
+importFrom(rvest,html_text)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_split)
+importFrom(tibble,as_tibble)
+importFrom(tibble,tibble)
+importFrom(xml2,read_html)
+importFrom(xml2,xml_add_sibling)
+importFrom(xml2,xml_find_all)
+importFrom(xml2,xml_remove)
