add artist songs retrieval as extended list

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,13 @@
 
 export(genius_token)
 export(get_album)
+export(get_album_df)
 export(get_album_meta)
 export(get_artist)
+export(get_artist_df)
 export(get_artist_meta)
 export(get_artist_songs)
+export(get_artist_songs_df)
 export(get_song)
 export(get_song_df)
 export(get_song_meta)
@@ -22,6 +25,7 @@ importFrom(httr,content)
 importFrom(httr,stop_for_status)
 importFrom(httr,user_agent)
 importFrom(purrr,"%>%")
+importFrom(purrr,flatten)
 importFrom(purrr,is_empty)
 importFrom(purrr,map_df)
 importFrom(rvest,html_attr)
