normalise func/variable names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(genius_token)
 export(get_album)
 export(get_album_df)
 export(get_album_meta)
+export(get_album_tracklist)
 export(get_artist)
 export(get_artist_df)
 export(get_artist_meta)
