simplify lyric retrieval funcs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(get_artist_df)
 export(get_artist_meta)
 export(get_artist_songs)
 export(get_artist_songs_df)
+export(get_lyrics_id)
+export(get_lyrics_url)
 export(get_song)
 export(get_song_df)
 export(get_song_meta)
