--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,19 +4,21 @@ Version: 1.1.0.9000
 Authors@R: 
     person("Ewen", "Henderson", email = "ewenhenderson@gmail.com", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0002-4748-4693"))
-Description: Provides tools to interact nicely with the 'Genius' API <https://docs.genius.com/>. Search hosted content, extract different types of associated metadata and retrieve lyrics with ease.
-URL: https://github.com/ewenme/geniusr
+Description: Provides tools to interact nicely with the 'Genius' API <https://docs.genius.com/>. 
+    Search hosted content, extract different types of associated metadata and retrieve lyrics 
+    with ease.
+URL: https://github.com/ewenme/geniusr, https://ewenme.github.io/geniusr/
 BugReports: https://github.com/ewenme/geniusr/issues
 Depends: R (>= 3.2.0)
 License: MIT + file LICENSE
 Imports: 
+    attempt,
+    curl,
     httr,
     purrr,
-    tibble,
     rvest,
-    xml2,
-    curl,
-    attempt
+    tibble,
+    xml2
 Encoding: UTF-8
 LazyData: yes
 RoxygenNote: 6.1.1
