--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(gen_get_artist_df)
 export(gen_get_artist_songs)
 export(gen_get_artist_songs_df)
 export(gen_get_lyrics_id)
+export(gen_get_lyrics_song)
 export(gen_get_lyrics_url)
 export(gen_get_song)
 export(gen_get_song_df)
@@ -24,7 +25,6 @@ export(scrape_lyrics_url)
 export(scrape_tracklist)
 export(search_artist)
 export(search_song)
-importFrom(attempt,stop_if_not)
 importFrom(curl,has_internet)
 importFrom(httr,GET)
 importFrom(httr,add_headers)
@@ -39,6 +39,7 @@ importFrom(purrr,map_dfr)
 importFrom(rvest,html_attr)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_text)
+importFrom(stringr,str_replace_all)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(xml2,read_html)
