make sure cross-linking works on website

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -36,3 +36,7 @@ reference:
     desc: "Functions for searching Genius content."
     contents:
       - starts_with("search")
+  - title: "Misc"
+    desc: "Other utility functions"
+    contents:
+      - print.genius_resource
