--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,8 @@
 pandoc: 2.3.1
 pkgdown: 1.4.0
 pkgdown_sha: ~
-articles: []
+articles:
+  intro: intro.html
 urls:
   reference: https://ewenme.github.io/geniusr//reference
   article: https://ewenme.github.io/geniusr//articles
