--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(get_album_df)
 export(get_album_meta)
 export(get_album_tracklist_id)
 export(get_album_tracklist_search)
+export(get_annotation)
 export(get_artist)
 export(get_artist_df)
 export(get_artist_meta)
@@ -15,6 +16,7 @@ export(get_artist_songs_df)
 export(get_lyrics_id)
 export(get_lyrics_search)
 export(get_lyrics_url)
+export(get_referent)
 export(get_song)
 export(get_song_df)
 export(get_song_meta)
