--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(print,genius_album)
 S3method(print,genius_annotation)
 S3method(print,genius_artist)
+S3method(print,genius_referent)
 S3method(print,genius_resource)
 S3method(print,genius_song)
 export(genius_token)
@@ -30,6 +31,7 @@ export(scrape_tracklist)
 export(search_artist)
 export(search_genius)
 export(search_song)
+export(tidy_song_relationships)
 importFrom(curl,has_internet)
 importFrom(httr,GET)
 importFrom(httr,add_headers)
@@ -39,6 +41,7 @@ importFrom(httr,user_agent)
 importFrom(purrr,"%>%")
 importFrom(purrr,flatten)
 importFrom(purrr,is_empty)
+importFrom(purrr,map_dfr)
 importFrom(rvest,html_attr)
 importFrom(rvest,html_nodes)
 importFrom(rvest,html_text)
