add tidy producer/writer credit funcs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,8 +31,14 @@ export(scrape_tracklist)
 export(search_artist)
 export(search_genius)
 export(search_song)
+export(tidy_custom_performances)
+export(tidy_producer_artists)
 export(tidy_song_relationships)
+export(tidy_writer_artists)
 importFrom(curl,has_internet)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,everything)
+importFrom(dplyr,select)
 importFrom(httr,GET)
 importFrom(httr,add_headers)
 importFrom(httr,content)
