function for extracting album performances

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,10 +31,11 @@ export(scrape_tracklist)
 export(search_artist)
 export(search_genius)
 export(search_song)
-export(tidy_custom_performances)
-export(tidy_producer_artists)
+export(tidy_album_performances)
+export(tidy_song_performances)
+export(tidy_song_producers)
 export(tidy_song_relationships)
-export(tidy_writer_artists)
+export(tidy_song_writers)
 importFrom(curl,has_internet)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
