utility funcs for getting genius objects to tibbles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(print,genius_artist)
 S3method(print,genius_referent)
 S3method(print,genius_resource)
 S3method(print,genius_song)
+export(album_to_df)
+export(artist_to_df)
 export(genius_token)
 export(get_album)
 export(get_album_df)
@@ -31,6 +33,7 @@ export(scrape_tracklist)
 export(search_artist)
 export(search_genius)
 export(search_song)
+export(song_to_df)
 export(tidy_album_performances)
 export(tidy_song_performances)
 export(tidy_song_producers)
