clean up readme/vignettes/site

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,10 @@ Version: 1.1.0.9000
 Authors@R: 
     person("Ewen", "Henderson", email = "ewenhenderson@gmail.com", role = c("aut", "cre"),
     comment = c(ORCID = "0000-0002-4748-4693"))
-Description: Provides tools to interact nicely with the 'Genius' API <https://docs.genius.com/>. 
+Description: Provides tools to interact nicely with the 'Genius' (FKA 'Rap Genius') API 
+    <https://docs.genius.com/>. 
     Search hosted content, extract associated metadata and retrieve lyrics with ease.
-URL: https://github.com/ewenme/geniusr, https://ewenme.github.io/geniusr/
+URL: https://ewenme.github.io/geniusr/, https://github.com/ewenme/geniusr
 BugReports: https://github.com/ewenme/geniusr/issues
 Depends: R (>= 3.2.0)
 License: MIT + file LICENSE
