--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method(print,genius_resource)
 S3method(print,genius_song)
 export(album_to_df)
 export(artist_to_df)
+export(browse_genius)
+export(browse_genius_resource)
 export(genius_token)
 export(get_album)
 export(get_album_df)
