--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -37,7 +37,7 @@ jobs:
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
         env: # Or as an environment variable
-          credentials: ${{ secrets.GENIUS_API_TOKEN }}
+          GENIUS_API_TOKEN: ${{ secrets.GENIUS_API_TOKEN }}
 
       - name: Deploy to GitHub pages 🚀
         if: github.event_name != 'pull_request'
